clusters/addons/monitoring-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    kubernetes.io/metadata.name: monitoring
  annotations:
    argocd.argoproj.io/sync-wave: "40"
