clusters/addons/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx
  annotations:
    # ensure ArgoCD applies this early (ingress-nginx App uses sync-wave: "-2")
    argocd.argoproj.io/sync-wave: "-3"
  labels:
    # the label in  NetworkPolicy expects
    kubernetes.io/metadata.name: ingress-nginx
